@@ -198,6 +198,11 @@ CHANGES
     - Warnings are now issued as type exceptions.SAWarning.
 
 - dialects
+    - Auto-detect an unspecified MySQL ANSI_QUOTES mode during
+      reflection operations, support for changing the mode
+      midstream.  Manual mode setting is still required if no
+      reflection is used.
+
     - Finally added PGMacAddr type to postgres [ticket:580]
 
     - Reflect the sequence associated to a PK field (typically
